# regex_extrator_email_phone

./: pyproject.toml
.github/workflows/: ci.yml
src/project_one/: __init__.py  functions.py  phoneAndEmail.py  urls.py
tests/: __init__.py  tests_regex.py
